# Catch2CMake

./: .gitignore  clean.sh  install.bat  install.sh  usage.bat  usage.sh
Usage/: CMakeLists.txt  main.cxx
